# api_grupo-2_rust_ESD

./: .gitignore  Cargo.toml
sql/: base.sql
src/: main.rs
src/config/: config.rs
src/controller/: autores_controller.rs  editoriales_controller.rs  mod.rs  usuarios_controller.rs
src/models/: autores.rs  editoriales.rs  libros.rs  mod.rs  usuarios.rs
src/repository/: autores_repository.rs  editoriales_repository.rs  libros_repository.rs  mod.rs  usuarios_repository.rs
src/service/: autores_service.rs  editoriales_service.rs  libros_service.rs  mod.rs  usuarios_service.rs
