[package]
name = "api_rest_g2"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
postgres = "0.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
rand = "0.8"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"